[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argo-shim"
dynamic = ["version"]
description = "HTTP proxy shim for Argo API via SSH tunnel"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: Proxy Servers",
]
keywords = ["argo", "proxy", "claude", "anthropic", "ssh-tunnel"]

[project.urls]
Homepage = "https://github.com/n-getty/argo-shim"
Repository = "https://github.com/n-getty/argo-shim"
Issues = "https://github.com/n-getty/argo-shim/issues"

[project.scripts]
argo-shim = "argo_shim._shim:main"

[tool.hatch.version]
path = "argo_shim/__init__.py"
